* Change NavigatorWidget to MapWidget as it makes more sense.
+ Added grid drawing code, needs adjust based on map cell size.

Signed-off-by: Joshua Michael Daly <b00056835@student.itb.ie>

--- a/framework/app/robot.kv
+++ b/framework/app/robot.kv
@@ -3,14 +3,14 @@
 <ToolbarWidget>:
   size_hint: 1, 0.1
 
-<NavigatorWidget>:
+<MapWidget>:
   canvas:
-    Color:
-      rgb: 0, 1, 0
+    #Color:
+    #  rgb: 0, 1, 0
 
-    Rectangle:
-      pos: 0, 0
-      size: self.width , self.height
+    #Rectangle:
+    #  pos: 0, 0
+    #  size: self.width , self.height
 
   size_hint: 0.75, 1
 
