--- a/framework/app/robot.kv
+++ b/framework/app/robot.kv
@@ -66,7 +66,7 @@
     background_normal: "/home/joshua/Documents/Projects/Robotics/robotics/framework/app/icon/stop.png"
 
 <PanelWidget>:
-  size_hint: 0.25, 1
+  size_hint: 0.35, 1
   cols: 2
   rows: 3
   Label:
@@ -78,6 +78,7 @@
   TextInput:
     id: mac_address_textinput
     disabled: True
+    text: "00:00:12:06:56:83"
   Button:
     id: connect_button
     text: "Connect"
